--- a/index.html
+++ b/index.html
@@ -1,9 +1,38 @@
-<!Doctype>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>Hello World</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
-  <h1> My third website</h1>
+  <div id="container"> 
+    <div id="header">
+        <h1>My Website</h1>
+  </div>
+  <div id="content">
+      <div id="nav"> 
+          <h3>Navigation</h3>
+          <u1>
+              <li>Home</li>
+              <li>About</li>
+              <li>Contact</li>
+          </u1>
+      </div>
+
+      <div id="main">
+          <h2>Home page</h2>
+      <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto optio, ipsa qui sint velit quidem dolor, assumenda repellendus consequatur corrupti beatae officia aspernatur asperiores labore aut. Cum aliquam eveniet hic.</p>
+      <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut fuga sunt sit vel, impedit, praesentium nam, dolorem veritatis laboriosam rerum id in voluptatibus? Labore accusamus quae ullam repellat quo. Reprehenderit.</p>
+      <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed nam reiciendis facere veniam ullam dolores vero beatae, recusandae ex quae maiores sint suscipit, repellendus est dolore nostrum ut similique tempora!</p>
+      </div>
+
+    </div>
+    <div id="footer">
+        Copyright &; 2024 Ayrica Smith. 
+      </div>
+      </div>
+
 </body>
-</html> 
+</html>
