--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
           <h3>Navigation</h3>
           <u1>
               <li><a class="selected" href="">Home</a></li>
-              <li>About</li>
-              <li>Contact</li>
+              <li><a href="">About</a></li>
+              <li><a href="">Contact</a></li>
           </u1>
       </div>
 
