--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     </div>
     <div id="footer">
-        Copyright &; 2024 Ayrica Smith. 
+        Copyright &copy; 2024 Ayrica Smith. 
       </div>
       </div>
 
