--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
         Copyright &copy; 2024 Ayrica Smith. 
       </div>
       </div>
-      <img src="https://qph.cf2.quoracdn.net/main-qimg-b32659287d801230e138c57eb0d2dd79-lq"/> 
+      <img src="https://upload.wikimedia.org/wikipedia/commons/2/25/Dispholidus_typus.jpg"/> 
 </body>
 </html>
